# offrun

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: project.yml  schemas.yml  source_contracts.yml  variables.yml
docs/: claim_boundaries.md  design.md  source_notes.md
src/offrun/: __init__.py  __main__.py  cli.py  config.py  contracts.py  io.py  manifests.py  panels.py  periods.py  real_sources.py  reports.py  trace_audit.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_contracts.py  test_panels.py  test_real_sources.py
tests/fixtures/buybacks/: buyback_operations_fixture.csv
tests/fixtures/dealer/: primary_dealer_fixture.csv
tests/fixtures/sibling_root/buycurve/data/clean/: monthly_issuance_maturity_panel.csv
tests/fixtures/sibling_root/buycurve/data/interim/: primary_dealer_context_clean.csv
tests/fixtures/sibling_root/buycurve/output/tables/: monthly_issuance_maturity_context.csv
tests/fixtures/sibling_root/liqsub/data/clean/: monthly_liquidity_substitution_panel.csv
tests/fixtures/sibling_root/liqsub/output/tables/: monthly_liquidity_plumbing.csv
tests/fixtures/sibling_root/rowflow/data/derived/: rowflow_panel.csv
tests/fixtures/sibling_root/tdcladder/data/clean/: liquidity_weighted_treasury_supply_by_bucket.csv  monthly_ladder_panel.csv
tests/fixtures/sibling_root/tdcladder/data/raw/market_liquidity/: turnover_by_maturity.csv
tests/fixtures/trace/: finra_trace_aggregate_fixture.csv  trace_aggregate_fixture.csv
(+1 files in other folders)
