[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offrun"
version = "0.1.0"
description = "Bounded Treasury buybacks and off-the-run liquidity evidence package."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shane Wray"}]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
offrun = "offrun.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
offrun = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]
